syntax = "proto3";

package movie;
option java_multiple_files = true;
option java_package="com.mdb.media_data_gateway_service.grpc";
option java_outer_classname = "MovieProto";

message SaveSampleResponseRequest {
    string json_content = 1;
}

message SaveSampleResponseResponse {
    string message = 1;
    int32 count = 2;
}

message GetMovieRequest {
    string imdb_id = 1;
}

message GetMovieResponse {
    string movie_json = 1;
}

service MovieService {
    rpc SaveSampleResponse (SaveSampleResponseRequest) returns (SaveSampleResponseResponse);
    rpc GetMovie (GetMovieRequest) returns (GetMovieResponse);
}
